# ddG4Demo

./: CMakeLists.txt
Detector/: CMakeLists.txt
Detector/compact/: ddG4Demo.xml
Detector/include/: demoConstructor.h
Detector/src/: demoConstructor.cpp  demoGeo.cpp
G4workflow/: CMakeLists.txt  ddG4Demo.cpp
G4workflow/include/: DemoActionInitialization.h  DemoPrimaryGeneratorAction.h  DemoRunAction.h  GeoConstruction.h
G4workflow/src/: DemoActionInitialization.cpp  DemoPrimaryGeneratorAction.cpp  DemoRunAction.cpp
